--- a/resume.html
+++ b/resume.html
@@ -293,13 +293,13 @@ Software Engineer
 <div class="position">
 </div>
 <div class="summary">
-<p>Besides my fulltime job, I also train programmers in areas of Python and Go.</p>
+<p>I train programmers in areas of Python and Go in both beginner and professional level.</p>
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
+<li class="bullet">Have taught a Deep Learning online course in TensorFlow in 2016. Received more than 2000 students and more than 120,000 views.</li>
 <li class="bullet">Have trained tens of programmers in Python.</li>
-<li class="bullet">Have started training Go programmers in 2018</li>
-<li class="bullet">Have taught a Deep Learning online course in TensorFlow in 2016. Received more than 2000 students and more than 100,000 views.</li>
+<li class="bullet">Teach students Clean Architechture</li>
 </ul>
 </div>
 </div>
