--- a/resume.html
+++ b/resume.html
@@ -275,9 +275,10 @@ Software Engineer
 </div>
 <h4>Highlights</h4>
 <ul class="highlights">
-<li class="bullet">Improved the performance of a Python testing system 300%</li>
-<li class="bullet">Added unicode support in the same Python system.</li>
-<li class="bullet">Developed a Q &amp; A system in Go with micro-services</li>
+<li class="bullet">Improved the performance of a <b>Python</b> testing system 300%</li>
+<li class="bullet">Solved database connetion deadlock problems in the same Python system.</li>
+<li class="bullet">Added <b>unicode support</b> in the same Python system.</li>
+<li class="bullet">Developed a Q &amp; A system in <b>Go</b> with <b>micro-services</b> and <b>GraphQL</b></li>
 </ul>
 </div>
 <div class="col-sm-12">
