--- a/resume.html
+++ b/resume.html
@@ -335,6 +335,8 @@
 							<li class="bullet">Solved database connetion deadlock problems in the same Python system.</li>
 							<li class="bullet">Added <b>unicode support</b> in the same Python system.</li>
 							<li class="bullet">Developed a Q &amp; A system in <b>Go</b> with <b>micro-services</b> and <b>GraphQL</b></li>
+							<li class="bullet">Developed a <b>docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service system in <b>Go</b>.</li>
+							<li class="bullet">Created a <b>GraphQL</b> client query builder library in <b>Go</b>.</li>
 						</ul>
 					</div>
 					<div class="col-sm-12">
@@ -354,10 +356,10 @@
 						</div>
 						<h4>Highlights</h4>
 						<ul class="highlights">
-							<li class="bullet">Have taught a Deep Learning online course in TensorFlow in 2016. Received more than 2000
+							<li class="bullet">Have taught a <b>Deep Learning</b> online course in <b>TensorFlow</b> in 2016. Received more than 2000
 								students and more than 120,000 views.</li>
 							<li class="bullet">Have trained tens of programmers in Python.</li>
-							<li class="bullet">Teach students Clean Architechture</li>
+							<li class="bullet">Teach students <b>Clean Architechture</b></li>
 						</ul>
 					</div>
 				</div>
@@ -394,16 +396,27 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="name">
-							<h4>Backend Development</h4>
+							<h4>Programming Languges</h4>
 						</div>
 						<ul class="keywords">
 							<li>Python</li>
 							<li>Go</li>
-							<li>NodeJS</li>
+							<li>JavaScript/TypeScript</li>
+							<li>Java</li>
+							<li>C++</li>
+						</ul>
+					</div>
+					<div class="col-sm-6">
+						<div class="name">
+							<h4>Backend Development</h4>
+						</div>
+						<ul class="keywords">
 							<li>GraphQL</li>
+							<li>REST API</li>
 							<li>HTTP/2</li>
-							<li>SQL</li>
-							<li>NoSQL</li>
+							<li>SQL & NoSQL</li>
+							<li>CI/CD (Continuous Integration and Delivering)</li>
+							<li>Docker</li>
 						</ul>
 					</div>
 					<div class="col-sm-6">
