--- a/resume.html
+++ b/resume.html
@@ -335,7 +335,7 @@
 							<li class="bullet">Solved database connetion deadlock problems in the same Python system.</li>
 							<li class="bullet">Added <b>unicode support</b> in the same Python system.</li>
 							<li class="bullet">Developed a Q &amp; A system in <b>Go</b> with <b>micro-services</b> and <b>GraphQL</b></li>
-							<li class="bullet">Developed a <b>docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service system in <b>Go</b>.</li>
+							<li class="bullet">Developed a <b>Docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service system in <b>Go</b>.</li>
 							<li class="bullet">Created a <b>GraphQL</b> client query builder library in <b>Go</b>.</li>
 						</ul>
 					</div>
