--- a/resume.html
+++ b/resume.html
@@ -3,17 +3,13 @@
 <head></head>
 
 <body>
-
-
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimal-ui">
 	<title>Xuanzhe Wang</title>
-	<script src="/cdn-cgi/apps/head/QEWNwoPSl2O5LqMXvi595gsiMPg.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
 	<style type="text/css">
-		@import url(https://fonts.googleapis.com/css?family=Lato:400,700
-);
+		@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 
 		body {
 			background: #fff;
@@ -291,8 +287,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
 					<div class="col-sm-6">
 						<strong class="network">
 							LinkedIn
@@ -335,7 +329,8 @@
 							<li class="bullet">Solved database connetion deadlock problems in the same Python system.</li>
 							<li class="bullet">Added <b>unicode support</b> in the same Python system.</li>
 							<li class="bullet">Developed a Q &amp; A system in <b>Go</b> with <b>micro-services</b> and <b>GraphQL</b></li>
-							<li class="bullet">Developed a <b>Docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service system in <b>Go</b>.</li>
+							<li class="bullet">Developed a <b>Docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service
+								system in <b>Go</b>.</li>
 							<li class="bullet">Created a <b>GraphQL</b> client query builder library in <b>Go</b>.</li>
 						</ul>
 					</div>
@@ -356,7 +351,8 @@
 						</div>
 						<h4>Highlights</h4>
 						<ul class="highlights">
-							<li class="bullet">Have taught a <b>Deep Learning</b> online course in <b>TensorFlow</b> in 2016. Received more than 2000
+							<li class="bullet">Have taught a <b>Deep Learning</b> online course in <b>TensorFlow</b> in 2016. Received more
+								than 2000
 								students and more than 120,000 views.</li>
 							<li class="bullet">Have trained tens of programmers in Python.</li>
 							<li class="bullet">Teach students <b>Clean Architechture</b></li>
