--- a/resume.html
+++ b/resume.html
@@ -355,7 +355,7 @@
 								than 2000
 								students and more than 120,000 views.</li>
 							<li class="bullet">Have trained tens of programmers in Python.</li>
-							<li class="bullet">Teach students <b>Clean Architechture</b></li>
+							<li class="bullet">Teach students <b>Clean Architecture</b></li>
 						</ul>
 					</div>
 				</div>
