--- a/resume.html
+++ b/resume.html
@@ -267,7 +267,7 @@
 				<h3>About</h3>
 			</aside>
 			<div class="col-sm-9">
-				<p>Xuanzhe is a professional software engineer who specialized in Go, Python, Backend Developement and Data
+				<p>Xuanzhe is a professional software engineer who specialized in Go, Python, Backend Development and Data
 					Science. He also has considerable experience with JavaScript.</p>
 			</div>
 		</section>
