--- a/resume.html
+++ b/resume.html
@@ -326,7 +326,7 @@
 						<h4>Highlights</h4>
 						<ul class="highlights">
 							<li class="bullet">Improved the performance of a <b>Python</b> testing system 300%</li>
-							<li class="bullet">Solved database connetion deadlock problems in the same Python system.</li>
+							<li class="bullet">Solved database connection deadlock problems in the same Python system.</li>
 							<li class="bullet">Added <b>unicode support</b> in the same Python system.</li>
 							<li class="bullet">Developed a Q &amp; A system in <b>Go</b> with <b>micro-services</b> and <b>GraphQL</b></li>
 							<li class="bullet">Developed a <b>Docker</b> <b>build & end-to-end testing pipeline</b> for the micro-service
